<resources>
    <string name="app_name">Raspberry Monitor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="option1">Name:</string>
    <string name="option2">IP address:</string>
    <string name="option3">Port:</string>
    <string name="option4">Identity:</string>
    <string name="field1">22</string>
    <string name="button1">Save</string>

    <string name="credential_username">Username:</string>
    <string name="credential_password">Password:</string>
    <string name="pass_show">Show Password</string>
    <string name="connection_title">Connection list</string>
    <string name="add_connection_title">Add New Connection</string>
    <string name="credential_title">Add New Credentials</string>
</resources>
